--- a/app/src/main/res/layout/activity_customer_info.xml
+++ b/app/src/main/res/layout/activity_customer_info.xml
@@ -28,6 +28,7 @@
         android:textAlignment="center"
         android:textColor="@color/purple_500"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +43,7 @@
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="#ff32CD32"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,10 +51,13 @@
 
     <Button
         android:id="@+id/button_transfer"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="46dp"
         android:layout_marginTop="84dp"
         android:text="Transfer"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
