--- a/app/src/main/res/layout/activity_tranfer_screen.xml
+++ b/app/src/main/res/layout/activity_tranfer_screen.xml
@@ -13,11 +13,14 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="168dp"
         android:layout_marginEnd="16dp"
+        android:textAlignment="center"
+        android:inputType="numberDecimal"
         android:hint="₹ 0.00"
         android:padding="5dp"
         android:background="@android:color/transparent"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="#ffff0000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
