--- a/app/src/main/res/layout/customer_card.xml
+++ b/app/src/main/res/layout/customer_card.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
+
             <TextView
                 android:id="@+id/name"
                 android:layout_width="match_parent"
@@ -24,7 +25,8 @@
                 android:text="name"
                 android:paddingStart="10dp"
                 android:layout_margin="5dp"
-                android:textColor="#505050"
+                android:textColor="@color/white"
+                android:textStyle="bold"
                 android:textSize="20sp" />
 
     </androidx.cardview.widget.CardView>
